Controllers: Added controller for /search (router not implemented)
